🩹 fix : #31 작성 페이지 생성 후 해당 studyId 값을 가진 상세 페이지로 적절한 리다이렉트 설정

--- a/src/main/resources/templates/study/StudyDetail.html
+++ b/src/main/resources/templates/study/StudyDetail.html
@@ -34,7 +34,7 @@
         <div class="button-group">
           <a th:href="@{/study/main}" class="btn">목록으로 가기</a>
           <div>
-            <button type="button" class="modify-button" onclick="modifyStudy()">수정</button>
+            <button type="button" class="modify-button" id="modify-button">수정</button>
             <button type="button" class="delete-btn" onclick="deleteStudy()">삭제</button>
           </div>
         </div>
