🩹 fix : #31 필터 내용 수정

--- a/src/main/resources/templates/fragments/studyMaintopsearch.html
+++ b/src/main/resources/templates/fragments/studyMaintopsearch.html
@@ -31,41 +31,35 @@
 
     <div id="filterContainer" class="filter-container">
         <div class="filter-section collapsed">
-            <h3 onclick="toggleSection(this)">지역</h3>
+            <h3 onclick="toggleSection(this)">트랙</h3>
             <div class="filter-options">
-                <span class="filter-option" onclick="toggleFilter(this)">강남구</span>
-                <span class="filter-option" onclick="toggleFilter(this)">강북구</span>
-                <span class="filter-option" onclick="toggleFilter(this)">강서구</span>
-                <span class="filter-option" onclick="toggleFilter(this)">관악구</span>
-                <span class="filter-option" onclick="toggleFilter(this)">광진구</span>
-                <span class="filter-option" onclick="toggleFilter(this)">구로구</span>
-                <span class="filter-option" onclick="toggleFilter(this)">금천구</span>
-                <span class="filter-option" onclick="toggleFilter(this)">노원구</span>
-                <span class="filter-option" onclick="toggleFilter(this)">도봉구</span>
-                <span class="filter-option" onclick="toggleFilter(this)">동대문구</span>
+                <span class="filter-option" onclick="toggleFilter(this)">프론트엔드</span>
+                <span class="filter-option" onclick="toggleFilter(this)">백엔드</span>
+                <span class="filter-option" onclick="toggleFilter(this)">풀스택</span>
+                <span class="filter-option" onclick="toggleFilter(this)">Android</span>
+                <span class="filter-option" onclick="toggleFilter(this)">iOS</span>
+                <span class="filter-option" onclick="toggleFilter(this)">게임</span>
+                <span class="filter-option" onclick="toggleFilter(this)">AI</span>
+                <span class="filter-option" onclick="toggleFilter(this)">데이터</span>
+                <span class="filter-option" onclick="toggleFilter(this)">UI/UX</span>
             </div>
         </div>
 
         <div class="filter-section collapsed">
-            <h3 onclick="toggleSection(this)">제시 단계</h3>
+            <h3 onclick="toggleSection(this)">수업 환경</h3>
             <div class="filter-options">
-                <span class="filter-option" onclick="toggleFilter(this)">서면</span>
-                <span class="filter-option" onclick="toggleFilter(this)">대면</span>
-                <span class="filter-option" onclick="toggleFilter(this)">전화</span>
-                <span class="filter-option" onclick="toggleFilter(this)">방문 견적</span>
+                <span class="filter-option" onclick="toggleFilter(this)">온라인</span>
+                <span class="filter-option" onclick="toggleFilter(this)">오프라인</span>
+                <span class="filter-option" onclick="toggleFilter(this)">혼합</span>
             </div>
         </div>
 
         <div class="filter-section collapsed">
-            <h3 onclick="toggleSection(this)">중류</h3>
+            <h3 onclick="toggleSection(this)">비용</h3>
             <div class="filter-options">
-                <span class="filter-option" onclick="toggleFilter(this)">철물</span>
-                <span class="filter-option" onclick="toggleFilter(this)">기계</span>
-                <span class="filter-option" onclick="toggleFilter(this)">배관/설비</span>
-                <span class="filter-option" onclick="toggleFilter(this)">전기</span>
-                <span class="filter-option" onclick="toggleFilter(this)">도장</span>
-                <span class="filter-option" onclick="toggleFilter(this)">바닥재</span>
-                <span class="filter-option" onclick="toggleFilter(this)">창호</span>
+                <span class="filter-option" onclick="toggleFilter(this)">국비</span>
+                <span class="filter-option" onclick="toggleFilter(this)">사비</span>
+                <span class="filter-option" onclick="toggleFilter(this)">무료</span>
             </div>
         </div>
 
