--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -75,8 +75,8 @@
             <div class="modal-content">
                 <span class="close">&times;</span>
                 <h2>부트캠프 등록</h2>
-                <input type="text" id="managerName" placeholder="부트캠프 관계자 이름">
                 <input type="text" id="bootcampName" placeholder="부트캠프 이름">
+                <input type="text" id="description" placeholder="부트캠프 한 줄 설명">
                 <button id="btnRegister" class="btn-register">등록하기</button>
             </div>
         </div>
