--- a/src/main/resources/static/css/study/StudyMain.css
+++ b/src/main/resources/static/css/study/StudyMain.css
@@ -296,6 +296,7 @@ button.learn-more:active::before {
   font-weight: bold;
   padding: 8px 12px;
   margin-left: 10px;
+  margin-bottom: 30px;
   border-radius: 20px;
   cursor: pointer;
   transition: background-color 0.3s, color 0.3s;
