✨ update : #31 현재 날짜 UI 표현

--- a/src/main/resources/templates/study/StudyDetail.html
+++ b/src/main/resources/templates/study/StudyDetail.html
@@ -27,6 +27,9 @@
           <div class="info-item">인원: <span id="maxMembers"></span></div>
           <div class="info-item">기간: <span id="duration"></span></div>
           <div class="info-item">주기: <span id="meetingFrequency"></span></div>
+          <div>
+            <span class="date" id="currentDate"></span>
+          </div>
         </div>
         <div class="study-description">
           <p id="description"></p>
