--- a/src/main/resources/static/css/study/StudyDetail.css
+++ b/src/main/resources/static/css/study/StudyDetail.css
@@ -32,7 +32,13 @@ body {
   margin-bottom: 10px;
   padding-bottom: 15px;
   border-bottom: 2px solid #ddd;
+  display: flex;
   justify-content: space-between;
+  align-items: center;
+}
+
+.date {
+  margin-left: 250px;
 }
 
 .study-info {
