--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -14,6 +14,9 @@
 </head>
 <body>
 <div class="container" id="container">
+    <a th:href="@{/home}" id="logoLink">
+        <img class="logo-img" th:src="@{/images/logo.png}"/>
+    </a>
     <!-- 회원가입 폼 -->
     <div class="form-container sign-up-container">
         <form id="signupForm">
