🩹 fix: #63 카테고리 배경색 변경

--- a/src/main/resources/static/css/question.css
+++ b/src/main/resources/static/css/question.css
@@ -125,7 +125,7 @@ h1, h2 {
 }
 
 .category-btn {
-    background-color: var(--body-bg);
+    background-color: white;
     border: 1px solid #ddd;
     color: var(--color);
     padding: 8px 15px;
