--- a/src/main/resources/static/css/recruitment/recruitmentMain.css
+++ b/src/main/resources/static/css/recruitment/recruitmentMain.css
@@ -115,21 +115,7 @@ body.dark {
 .filter-button:hover {
     background-color: #FFE45E;
 }
-.filter-section {
-    display: none;
-    flex-direction: column;
-    gap: 10px;
-    margin-bottom: 20px;
-    padding: 15px;
-    background-color: var(--body-bg);
-    color: var(--color);
-    border: 1px solid #ddd;
-    border-radius: 4px;
-}
-.filter-section.show {
-    display: flex;
-    color: var(--color);
-}
+
 .reset-filters {
     background-color: var(--sidebar-bg);
 }
@@ -183,15 +169,16 @@ body.dark {
 .filter-option.active {
     background-color: #FFE45E;
 }
-.filter-actions {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 15px;
-}
-.filter-actions button {
-    flex: 1;
-    margin: 0 5px;
-}
+/*.filter-actions {*/
+/*    display: flex;*/
+/*    justify-content: space-between;*/
+/*    margin-top: 15px;*/
+/*}*/
+/*.filter-actions button {*/
+/*    flex: 1;*/
+/*    margin: 0 5px;*/
+/*}*/
+
 .sort-buttons {
     display: flex;
     justify-content: flex-end;
@@ -358,4 +345,18 @@ body.dark {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.ranking-item {
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    padding: 15px;
+    position: relative;
+    transition: transform 0.3s, box-shadow 0.3s;
+    cursor: pointer;
+}
+
+.ranking-item:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 5px 15px rgba(0,0,0,0.1);
 }
