🩹 fix : #66 recruitmentTopsearch 생성으로 교체

--- a/src/main/resources/templates/recruitment/recruitmentMain.html
+++ b/src/main/resources/templates/recruitment/recruitmentMain.html
@@ -25,7 +25,7 @@
   <div class="content-wrapper">
     <div class="content">
       <!-- 헤더 -->
-      <div th:replace="~{'fragments/ranktopsearch' :: ranktopsearch}"></div>
+      <div th:replace="~{'fragments/recruitmentTopsearch' :: recruitmentTopsearch}"></div>
 
       <!-- 모집글 작성 바로가기 배너 -->
       <div class="review-section write-text">
