--- a/src/main/resources/static/css/rank/Rank.css
+++ b/src/main/resources/static/css/rank/Rank.css
@@ -123,9 +123,19 @@ body {
 }
 
 .rating {
-    color: #ffc107;
-    font-size: 18px;
+    color: #FF6B35;
+    font-size: 20;
+    font-weight: bold;
     margin-bottom: 10px;
+}
+
+.camp-image {
+    width: 200px; /* 이미지 크기 조정 */
+    height: 50px;
+    display: block;
+    margin: 0 auto;
+    margin-bottom: 30px;
+    margin-top: 60px;
 }
 
 .review-preview {
