✨ update : #77 사이드바 rank 태그 생성

--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -25,6 +25,9 @@
             <a class="sidebar-link" th:href="@{/study/main}">
                 <img th:src="@{/images/icon-board.svg}" alt="icon" /><span>Study</span>
             </a>
+            <a class="sidebar-link" th:href="@{/rank}">
+                <img th:src="@{/images/icon-board.svg}" alt="icon" /><span>Rank</span>
+            </a>
         </nav>
         <div class="theme-toggle">
             <img th:src="@{/images/icon-light-theme.svg}" alt="Light Theme Icon" />
