💄 style : #77 작성 배너 한글로 통일 & 수정

--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -23,7 +23,7 @@
             <div class="question-main-container">
                 <div class="question-container">
                     <div class="left-content">
-                        <h1>Ask a Question</h1>
+                        <h1>질문 작성하러 가기</h1>
                         <p class="subtitle">Openly share what you're curious about.</p>
                     </div>
                     <button class="start-question-btn">START A QUESTION</button>
