--- a/src/main/resources/templates/review/reviewMain.html
+++ b/src/main/resources/templates/review/reviewMain.html
@@ -30,7 +30,7 @@
             <div class="content-wrapper">
                 <div class="write-review-content">
                     <div class="write-review-text write-text">
-                        <h2>Write a Review</h2>
+                        <h2>리뷰 작성하러 가기</h2>
                         <p>Share your experience with others</p>
                     </div>
                     <button class="write-review-button learn-more" onclick="addReview()" th:review-add-url="@{/review/add}">Start a Review</button>
