--- a/src/main/resources/templates/study/StudyMain.html
+++ b/src/main/resources/templates/study/StudyMain.html
@@ -28,7 +28,7 @@
         <div class="content-wrapper">
           <div class="write-review-content">
             <div class="write-review-text write-text">
-              <h2>모집글 작성하기</h2>
+              <h2>스터디 작성하러 가기</h2>
               <p>Share your experience with others</p>
             </div>
             <button class="write-review-button learn-more" data-url="/study/write">Start a Write
