--- a/src/main/resources/templates/recruitment/recruitmentAdd.html
+++ b/src/main/resources/templates/recruitment/recruitmentAdd.html
@@ -23,7 +23,7 @@
     <div class="content">
         <div class="container">
             <h1>부트캠프 모집글 작성</h1>
-            <form class="course-form" id="courseForm">
+            <form class="course-form" id="courseForm" enctype="multipart/form-data">
                 <div class="form-group">
                     <label>카테고리</label>
                     <div class="category-select">
@@ -105,6 +105,10 @@
                     <label for="courseTime">수업 시간</label>
                     <input type="text" id="courseTime" name="courseTime" required>
                     <div id="courseTimeError" class="error-message"></div>
+                </div>
+                <div class="form-group">
+                    <label for="imageFile">이미지 파일</label>
+                    <input type="file" id="imageFile" name="imageFile" accept="image/*">
                 </div>
                 <div class="button-group">
                     <button type="button" class="button cancel-button" id="cancelButton">취소</button>
