--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -20,6 +20,7 @@
 
     <script th:src="@{/js/calendar/dist/index.global.js}" defer></script>
     <script th:src="@{/js/scripts.js}" defer></script>
+    <script type="module" th:src="@{/js/auth.js}" defer></script>
 
     <style>
         body {
