🩹 fix: #83 챗 html 생성.

--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -28,6 +28,9 @@
             <a class="sidebar-link" th:href="@{/rank}">
                 <img th:src="@{/images/icon-board.svg}" alt="icon" /><span>Rank</span>
             </a>
+            <a class="sidebar-link" th:href="@{/chat}">
+                <img th:src="@{/images/icon-board.svg}" alt="icon" /><span>실시간 채팅</span>
+            </a>
         </nav>
         <div class="theme-toggle">
             <img th:src="@{/images/icon-light-theme.svg}" alt="Light Theme Icon" />
