✨ update : #82 AWS S3를 활용하여 이미지 업로드와 수정을 위한 로직 추가

--- a/src/main/resources/templates/recruitment/recruitmentDetail.html
+++ b/src/main/resources/templates/recruitment/recruitmentDetail.html
@@ -26,6 +26,9 @@
                 <div class="course-title-container">
                     <h1 class="course-title non-editable">코딩의 정석</h1>
                     <input type="text" class="course-title editable" name="title" value="코딩의 정석">
+                    <div class="image-container">
+                        <input type="file" id="imageUpload" class="course-image editable" accept="image/*">
+                    </div>
                     <div class="like-container">
                         <button class="like-button" id="likeButton">
                             <i class="fas fa-heart"></i>
