--- a/src/main/resources/templates/fragments/topbar.html
+++ b/src/main/resources/templates/fragments/topbar.html
@@ -16,6 +16,7 @@
             <a class="topbar-link" href="#" onclick="refreshPage()"><span>Study Trek</span></a>
         </nav>
         <button class="add-task-button" id="adminButton" onclick="location.href='/admin'" style="display: none;">ADMIN</button>
+        <button class="add-task-button" id="alarmButton" onclick="openAlarmPopup()">알림</button>
         <button class="add-task-button" id="loginButton" onclick="location.href='/auth'">Login</button>
     </div>
 </div>
