--- a/src/main/resources/templates/fragments/topbar.html
+++ b/src/main/resources/templates/fragments/topbar.html
@@ -18,7 +18,7 @@
         <button class="add-task-button" id="adminButton" onclick="location.href='/admin'" style="display: none;">ADMIN</button>
         <button class="add-task-button alarm-badge" id="alarmButton" onclick="openAlarmPopup()">
             알림
-            <span class="badge" id="unreadCountBadge">3</span>
+            <span class="badge" id="unreadCountBadge"></span>
         </button>
 
         <button class="add-task-button" id="loginButton" onclick="location.href='/auth'">Login</button>
