🩹 fix: #83 알림 삭제기능 추가

--- a/src/main/resources/static/css/alarm.css
+++ b/src/main/resources/static/css/alarm.css
@@ -71,3 +71,8 @@ ul#notificationList li button:active {
     color: #aaa;
     cursor: not-allowed;
 }
+
+.delete-btn {
+    margin-left: 10px;
+}
+
