--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -96,6 +96,7 @@
                             <option value="멋쟁이사자처럼">멋쟁이사자처럼</option>
                             <option value="네이버 부스트캠프">네이버 부스트캠프</option>
                             <option value="우아한테크코스">우아한테크코스</option>
+                            <option value="스파르타">스파르타</option>
                         </select>
                     </div>
                     <div class="form-group">
