--- a/src/main/resources/templates/review/reviewMain.html
+++ b/src/main/resources/templates/review/reviewMain.html
@@ -15,6 +15,7 @@
     <script th:src="@{/js/scripts.js}" defer></script>
     <script th:src="@{/js/topsearch.js}" defer></script>
     <script th:src="@{/js/review/reviewMain.js}" defer></script>
+    <script type="module" th:src="@{/js/auth.js}" defer></script>
 </head>
 <body th:classappend="${isDarkMode} ? 'dark' : ''">
 <div th:replace="~{'fragments/topbar' :: topbar}"></div>
