fix: #83 알림 기능 리뷰댓글 리뷰대댓글 질문댓글 질문대댓글 스터디댓글 스터디대댓글 연동

--- a/src/main/resources/static/css/alarm.css
+++ b/src/main/resources/static/css/alarm.css
@@ -76,3 +76,37 @@ ul#notificationList li button:active {
     margin-left: 10px;
 }
 
+.notification-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    border-bottom: 1px solid #ddd;
+}
+
+.notification-text {
+    display: flex;
+    flex-grow: 1;
+    margin-right: 10px;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.notification-message {
+    flex-grow: 1;
+    margin-right: 10px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.notification-date {
+    white-space: nowrap;
+    margin-left: 20px;
+    flex-shrink: 0;
+}
+
+.button-group {
+    display: flex;
+    gap: 5px;
+}
