--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -98,5 +98,6 @@
 <script th:src="@{/js/scripts.js}" defer></script>
 <script th:src="@{/js/question.js}" defer></script>
 <script th:src="@{/js/topsearch.js}" defer></script>
+<script type="module" th:src="@{/js/auth.js}" defer></script>
 </body>
 </html>
