--- a/src/main/resources/templates/recruitment/recruitmentMain.html
+++ b/src/main/resources/templates/recruitment/recruitmentMain.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@5.0.0/dark.css">
   <!-- SweetAlert2 JS -->
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script type="module" th:src="@{/js/auth.js}" defer></script>
   <script th:src="@{/js/scripts.js}" defer></script>
   <script th:src="@{/js/recruitmentTopsearch.js}" defer></script>
   <script th:src="@{/js/recruitment/recruitmentMain.js}" defer></script>
