--- a/src/main/resources/templates/study/StudyMain.html
+++ b/src/main/resources/templates/study/StudyMain.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" th:href="@{/css/studyMaintopsearch.css}">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@5.0.0/dark.css">
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script type="module" th:src="@{/js/auth.js}" defer></script>
   <script th:src="@{/js/scripts.js}" defer></script>
   <script th:src="@{/js/studyMaintopsearch.js}" defer></script>
   <script th:src="@{/js/study/StudyMain.js}" defer></script>
