--- a/src/main/resources/static/css/question.css
+++ b/src/main/resources/static/css/question.css
@@ -42,6 +42,12 @@ body {
     margin-top: 40px;
 }
 
+.content-wrapper {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 5%;
+}
+
 .main-container {
     display: flex;
     flex-direction: column;
@@ -52,13 +58,14 @@ body {
     transition: margin-left 0.3s ease;
 }
 
-.question-container {
+.write-text {
+    color: var(--color);
     background-color: var(--body-bg);
-    padding: 20px 40px;
-    border-radius: 8px;
-    border: 1px solid rgba(0, 0, 0, 0.2);
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-    margin-top: 30px;
+}
+
+.question-container {
+    width: 600px;
+    margin: 0 auto; /* Center the content horizontally */
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -66,6 +73,25 @@ body {
 
 .left-content {
     text-align: left;
+}
+
+.start-question-btn {
+    background-color: #c2f4fd;
+    width: 170px;
+    height: 60px;
+    color: white;
+    border: none;
+    padding: 10px 10px;
+    font-size: 14px; /* 글자 크기를 15px에서 14px로 줄임 */
+    line-height: 1.2; /* 버튼 내부의 텍스트가 수직으로 가운데 정렬되도록 조정 */
+    text-align: center; /* 텍스트 가운데 정렬 */
+    cursor: pointer;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+.start-question-btn:hover {
+    background-color: #7fecff;
+    color: rgb(104, 165, 255);
 }
 
 h1, h2 {
@@ -113,15 +139,6 @@ h1, h2 {
     top: 20px;
     left: 20px;
     z-index: 1000;
-}
-
-.category-container {
-    display: flex;
-    justify-content: flex-end;
-    flex-wrap: wrap;
-    gap: 10px;
-    margin-bottom: 20px;
-    margin-top: 20px;
 }
 
 .category-btn {
@@ -172,13 +189,27 @@ h1, h2 {
     margin-bottom: 10px;
 }
 
-.question-and-pagination, .search-container {
+.search-container {
     max-width: 1200px;
     width: 100%;
     margin: 0 auto;
     padding: 0 15px;
 }
 
+
+.question-and-pagination {
+    color: #c2f4fd;
+    padding: 30px 0;
+    margin-top: 60px;
+    width: 1200px;
+    margin: 20px auto;
+
+    display: flex;
+    flex-direction: column;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
 .question-title {
     font-weight: bold;
     font-size: 18px;
@@ -380,4 +411,62 @@ label {
     color: var(--close-hover-color);
     text-decoration: none;
     cursor: pointer;
+}
+
+:root {
+    --bg: #fff;
+    --text: #382B22;
+    --light-pink: #f0faff;
+    --pink: #e9f9ff;
+    --dark-pink: #c4f5f9;
+    --pink-border: #afd9eb;
+    --pink-shadow: #e2f7ff;
+}
+
+button.learn-more {
+    font-weight: 800;
+    color: var(--text);
+    text-transform: uppercase;
+    /* padding: 1.25em 2em; */
+    background: var(--light-pink);
+    border: 2px solid var(--pink-border);
+    border-radius: 0.75em;
+    transform-style: preserve-3d;
+    transition: transform 150ms cubic-bezier(0, 0, 0.58, 1), background 150ms cubic-bezier(0, 0, 0.58, 1);
+}
+
+button.learn-more::before {
+    position: absolute;
+    content: '';
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: var(--dark-pink);
+    border-radius: inherit;
+    box-shadow: 0 0 0 2px var(--pink-border), 0 0.625em 0 0 var(--pink-shadow);
+    transform: translate3d(0, 0.75em, -1em);
+    transition: transform 150ms cubic-bezier(0, 0, 0.58, 1), box-shadow 150ms cubic-bezier(0, 0, 0.58, 1);
+}
+
+button.learn-more:hover {
+    background: var(--pink);
+    transform: translate(0, 0.25em);
+}
+
+button.learn-more:hover::before {
+    box-shadow: 0 0 0 2px var(--pink-border), 0 0.5em 0 0 var(--pink-shadow);
+    transform: translate3d(0, 0.5em, -1em);
+}
+
+button.learn-more:active {
+    background: var(--pink);
+    transform: translate(0em, 0.75em);
+}
+
+button.learn-more:active::before {
+    box-shadow: 0 0 0 2px var(--pink-border), 0 0 var(--pink-shadow);
+    transform: translate3d(0, 0, -1em);
 }
