--- a/src/main/resources/templates/chat.html
+++ b/src/main/resources/templates/chat.html
@@ -11,7 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script th:src="@{/js/scripts.js}" defer></script>
     <script type="module" th:src="@{/js/auth.js}" defer></script>
-    <script type="module" th:src="@{/js/chat.js}" defer></script>
+    <script th:src="@{/js/chat.js}" defer></script>
 </head>
 <body th:classappend="${isDarkMode} ? 'dark' : ''">
 <div th:replace="~{'fragments/topbar' :: topbar}"></div>
